# aiconverse

./: README.md  pyproject.toml  template.txt
aiconverse/: __init__.py  __main__.py  ai.py  cli.py  run_checks.py  template_handler.py
tests/: __init__.py
